--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -6,9 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: 
-    - master
-    - project1
+    branches: ["master","project1"]
   pull_request:
     branches: [ "master" ]
 
