--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -5,10 +5,16 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: ["master","project1"]
+  branches:
+      - '**'
+      - '!renovate/**'
+    paths-ignore:
+      - README.md
+      - CONTRIBUTING.md
+      - main.yml
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - '**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
