--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Node
       - uses: actions/setup-node@v1
       with:
-          node-version: '18.12.1'
+          node-version: 'v18.12.1'
         - name: Install Dependencies
           run: yarn
         - name: Build Project
