--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -38,9 +38,9 @@ jobs:
       with:
           node-version: 'v18.12.1'
         - name: Install Dependencies
-          run: yarn
+          run: npm install
         - name: Build Project
-          run: yarn build
+          run: npm run build
 
 
       # Runs a single command using the runners shell
