--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -41,3 +41,8 @@ jobs:
         env:
           CYPRESS_INSTALL_BINARY: 0
       - run: pnpm build
+      - uses: actions/cache/save@v3
+        id: cache
+        with:
+          path: outfile.cjs
+          key: ${{ github.sha }}-${{ hashFiles('pnpm-lock.yaml') }}
