--- a/.github/工作流程/main.yml
+++ b/.github/工作流程/main.yml
@@ -29,20 +29,26 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'pnpm'
-      - run: pnpm install
-        env:
-          CYPRESS_INSTALL_BINARY: 0
-      - run: pnpm build
-      - uses: actions/cache/save@v3
-        id: cache
-        with:
-          path: outfile.cjs
-          key: ${{ github.sha }}-${{ hashFiles('pnpm-lock.yaml') }}
+
+      # # 添加node编译节点
+      # - name: Setup Node
+      # - uses: actions/setup-node@v1
+      # with:
+      #     node-version: '12.x'
+      #   - name: Install Dependencies
+      #     run: npm install
+      #   - name: Build Project
+      #     run: npm run build
+
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
