--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,14 +33,14 @@ jobs:
       - uses: actions/checkout@v3
 
       # # 添加node编译节点
-      # - name: Setup Node
-      # - uses: actions/setup-node@v1
-      # with:
-      #     node-version: '12.x'
-      #   - name: Install Dependencies
-      #     run: npm install
-      #   - name: Build Project
-      #     run: npm run build
+      - name: Setup Node
+      - uses: actions/setup-node@v1
+      with:
+          node-version: '18.12.1'
+        - name: Install Dependencies
+          run: npm install
+        - name: Build Project
+          run: npm run build
 
 
       # Runs a single command using the runners shell
