调试自动化部署

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
-      with:
-          node-version: '18.12.1'
-        - name: Install Dependencies
-          run: npm install
-        - name: Build Project
-          run: npm run build
+        with:
+          node-version: 18
+      - run: npm install
+      - run: npm run build
 
 
       # Runs a single command using the runners shell
