--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
-          # path: './dist'
+          path: './dist'
           branch: 'main'
           folder: 'dist'
       - name: Deploy to GitHub Pages
