--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,38 +32,25 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # 单次部署的工作描述
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
+      - uses: actions\/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions\/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
+
       - name: Install dependencies
         run: npm install
+
       - name: Build
         run: npm run build
-      - name: Deploy
-      uses: JamesIves\/github-pages-deploy-action@3.7.1
-      with:
-        branch: main
-        folder: dist
 
-      # - name: Setup Pages
-      #   uses: actions/configure-pages@v3
-      # - name: Upload artifact
-      #   uses: actions/upload-pages-artifact@v1
-        # with:
-        #   # Upload dist repository
-        #   path: './dist'
-        #   folder: 'dist'
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v1
+      - name: Deploy
+        uses: JamesIves\/github-pages-deploy-action@3.7.1
+        with:
+          branch: main
+          folder: dist
